Header - fix view in mobile
- Buttons do not overlap in mobile-landpsace view
- Removed unnecessary positioning and empty lines
- Moved css code responsible for mobile view

--- a/src/app/pages/index/index.less
+++ b/src/app/pages/index/index.less
@@ -12,44 +12,6 @@ body {
   color: #2D313C;
 }
 
-.text-vertical-center {
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-}
-
-.text-vertical-center h1 {
-  margin-top: 14%;
-  margin-bottom: 0;
-  padding: 0;
-  font-size: 5.5em;
-  font-weight: 700;
-  color: #0f497f;
-}
-
-.text-vertical-center h1 span {
-  color: #00a6eb;
-}
-
-.text-vertical-center h1 span b {
-  font-size: 0.5em;
-  color: #00a6eb;
-  font-weight: 100;
-}
-
-.text-vertical-center h2 {
-  margin: 0;
-  padding-bottom: 10px;
-  font-size: 2.0em;
-  color: #000000;
-}
-
-.text-vertical-center h3 {
-  margin: 0;
-  padding: 0;
-  font-size: 1.5em;
-  color: #000000;
-}
 
 .text-white {
   color: white;
@@ -445,20 +407,12 @@ footer {
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 @media (max-width: 768px) {
-  .header h1 {
-    font-size: 40px;
-  }
-
-  .text-vertical-center h2 {
-    font-size: 23px;
-  }
-
   h3 {
-    font-size: 20px;
+    font-size: 20px !important;
   }
 
   .section-header h1 {
-    font-size: 30px;
+    font-size: 30px !important;
   }
 }
 
